# NeuroAtom

./: .gitignore  AUDIT_REPORT.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  architecture_audit.md  edge_case_audit.md  importer_audit.md  infrastructure_gap_analysis.md  multimodal_assembly.md  writing_an_importer.md
examples/: aad_mlp_cross_subject.py  bci_iv_2a_full_pipeline.py  benchmark_scale.py  federated_cross_dataset.py  pretrain_eeg_mae.py  train_simple_cnn.py  yaml_pipeline.py
examples/configs/: ccep_paired.yaml  mi_4class_bci.yaml
neuroatom/: __init__.py  quick.py
neuroatom/assembler/: __init__.py  alignment.py  channel_mapper.py  dataset_assembler.py  federated_assembler.py  filter.py  label_encoder.py  multimodal_assembler.py  normalizer.py  padcrop.py  rereferencer.py  resampler.py  splitter.py  unit_standardizer.py
neuroatom/atomizer/: __init__.py  base.py  event.py  trial.py  window.py
neuroatom/catalog/: __init__.py  local.py  models.py  remote.py
neuroatom/cli/: __init__.py  main.py
neuroatom/configs/: __init__.py  channel_aliases.yaml  default_pool.yaml  standard_1020.json
neuroatom/contrib/: __init__.py  scaffold.py  validate_import.py
neuroatom/core/: __init__.py  annotation.py  atom.py  channel.py  dataset_meta.py  electrode.py  enums.py  montage.py  multimodal_recipe.py  provenance.py  quality.py  recipe.py  run.py  session.py  signal_ref.py  stimulus.py  subject.py
neuroatom/importers/: __init__.py  aad_mat.py  asa.py  base.py  (+32 more)
tests/: _debug_bandpass.py  _debug_channels.py  _test_multiload_quick.py  conftest.py  test_assembler.py  test_catalog.py  test_concurrency_and_perf.py  test_contrib.py  test_core_models.py  test_e2e_aad_cross_subject.py  test_e2e_asa.py  test_e2e_avgc_aad.py  test_e2e_base_aad_ustc.py  test_e2e_bci_iv_2a.py  test_e2e_ccep.py  test_e2e_chb_mit.py  test_e2e_chinese_eeg.py  test_e2e_chinese_eeg2.py  test_e2e_dtu.py  test_e2e_ear_eeg_aad.py  test_e2e_ear_saad.py  test_e2e_eeg_aad_255.py  test_e2e_eeg_ieeg_wm.py  test_e2e_esaa.py  test_e2e_import.py  test_e2e_kul.py  test_e2e_lemon.py  test_e2e_multiload.py  test_e2e_openbmi.py  test_e2e_physionet.py  test_e2e_seedv.py  test_e2e_sleep_edf.py  test_e2e_snhl_aad.py  test_e2e_things_eeg2.py  test_e2e_tsinghua_ssvep.py  test_e2e_tuab.py  test_e2e_zuco1.py  test_e2e_zuco2.py  test_edge_cases.py  test_importer_edge_cases.py  (+12 more)
(+64 files in other folders)
